--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "airtable-react",
   "version": "0.2.0",
-  "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0"
   },
   "dependencies": {
-    "env2": "^2.2.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "whatwg-fetch": "^2.0.2"
+    "airtable-node": "^0.1.19",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "parcel-bundler": "^1.10.3",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "node server.js",
+    "start": "node server.js"
   }
 }
